--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Datamosh GUI built in Electron",
   "main": "index.js",
   "dependencies": {
+    "async": "^3.1.0",
     "electron": "^7.1.5",
     "python-shell": "^1.0.8"
   },
